Initial migration to .NET 5

--- a/sims.common/sims.common.csproj
+++ b/sims.common/sims.common.csproj
@@ -1,22 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C42962A1-8796-4F47-9DCD-79ED5904D8CA}</ProjectGuid>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TSO.Common</RootNamespace>
     <AssemblyName>Common</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <OldToolsVersion>3.5</OldToolsVersion>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -32,24 +19,12 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework, Version=3.1.2.0, Culture=neutral, processorArchitecture=MSIL">
@@ -61,82 +36,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SimsVille\Dependencies\OpenTK.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core">
+    <Reference Update="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq">
+    <Reference Update="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="content\ContentID.cs" />
-    <Compile Include="content\IContent.cs" />
-    <Compile Include="content\IContentProvider.cs" />
-    <Compile Include="content\IContentReference.cs" />
-    <Compile Include="FSOEnvironment.cs" />
-    <Compile Include="IniConfig.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="Model\IntersectRectSet.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="rendering\framework\3DAbstract.cs" />
-    <Compile Include="rendering\framework\3DComponent.cs" />
-    <Compile Include="rendering\framework\3DLayer.cs" />
-    <Compile Include="rendering\framework\3DScene.cs" />
-    <Compile Include="rendering\framework\3DTargetScene.cs" />
-    <Compile Include="rendering\framework\camera\BasicCamera.cs" />
-    <Compile Include="rendering\framework\camera\ICamera.cs" />
-    <Compile Include="rendering\framework\camera\ManualCamera.cs" />
-    <Compile Include="rendering\framework\camera\OrthographicCamera.cs" />
-    <Compile Include="rendering\framework\CursorManager.cs" />
-    <Compile Include="rendering\framework\Game.cs" />
-    <Compile Include="rendering\framework\GameScreen.cs" />
-    <Compile Include="rendering\framework\I3DGeometry.cs" />
-    <Compile Include="rendering\framework\IGraphicsLayer.cs" />
-    <Compile Include="rendering\framework\io\IDepthProvider.cs" />
-    <Compile Include="rendering\framework\io\IFocusableUI.cs" />
-    <Compile Include="rendering\framework\io\InputManager.cs" />
-    <Compile Include="rendering\framework\io\MouseEvent.cs" />
-    <Compile Include="rendering\framework\model\UIState.cs" />
-    <Compile Include="rendering\framework\model\UpdateState.cs" />
-    <Compile Include="rendering\framework\shapes\3DCube.cs" />
-    <Compile Include="rendering\framework\UpdateHookDelegate.cs" />
-    <Compile Include="rendering\vitaboy\Animation.cs" />
-    <Compile Include="rendering\vitaboy\Appearance.cs" />
-    <Compile Include="rendering\vitaboy\AppearanceType.cs" />
-    <Compile Include="rendering\vitaboy\BCF.cs" />
-    <Compile Include="rendering\vitaboy\Binding.cs" />
-    <Compile Include="rendering\vitaboy\BlendData.cs" />
-    <Compile Include="rendering\vitaboy\Bone.cs" />
-    <Compile Include="rendering\vitaboy\BoneBinding.cs" />
-    <Compile Include="rendering\vitaboy\CFP.cs" />
-    <Compile Include="rendering\vitaboy\Collection.cs" />
-    <Compile Include="rendering\vitaboy\HandGroup.cs" />
-    <Compile Include="rendering\vitaboy\Mesh.cs" />
-    <Compile Include="rendering\vitaboy\MeshVertex.cs" />
-    <Compile Include="rendering\vitaboy\Outfit.cs" />
-    <Compile Include="rendering\vitaboy\PurchasableOutfit.cs" />
-    <Compile Include="rendering\vitaboy\Skeleton.cs" />
-    <Compile Include="rendering\vitaboy\VitaboyVertex.cs" />
-    <Compile Include="utils\Callback.cs" />
-    <Compile Include="utils\DirectionUtils.cs" />
-    <Compile Include="utils\DotPath.cs" />
-    <Compile Include="utils\FileUtils.cs" />
-    <Compile Include="utils\HTMLPrinter.cs" />
-    <Compile Include="utils\IffPrinter.cs" />
-    <Compile Include="utils\PPXDepthEngine.cs" />
-    <Compile Include="utils\Promise.cs" />
-    <Compile Include="utils\TextureGenerator.cs" />
-    <Compile Include="utils\TextureUtils.cs" />
-  </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
       <Visible>False</Visible>
@@ -160,17 +66,21 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\sims.files\sims.files.csproj">
-      <Project>{18583453-A970-4AC5-83B1-2D6BFDF94C24}</Project>
-      <Name>sims.files</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\sims.files\sims.files.csproj" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <ItemGroup>
+    <Compile Remove="rendering\framework\winforms\GraphicsDeviceControl.cs" />
+    <Compile Remove="rendering\framework\winforms\GraphicsDeviceService.cs" />
+    <Compile Remove="rendering\framework\winforms\ServiceContainer.cs" />
+    <Compile Remove="rendering\framework\winforms\WinFormsGameWindow.cs" />
+    <Compile Remove="rendering\vitaboy\ShadowVertex.cs" />
+    <Compile Remove="utils\RenderUtils.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.2.212405">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.2" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
+  </ItemGroup>
 </Project>
