--- a/SimsVille/SimsVille.csproj
+++ b/SimsVille/SimsVille.csproj
@@ -3,6 +3,7 @@
         <TargetFramework>net5.0-windows</TargetFramework>
         <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
         <OutputType>Exe</OutputType>
+        <Nullable>warning</Nullable>
         <RootNamespace>FSO.Client</RootNamespace>
         <MonoGamePlatform>Linux</MonoGamePlatform>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
