--- a/sims.files/sims.files.csproj
+++ b/sims.files/sims.files.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <OutputType>Library</OutputType>
+    <Nullable>warning</Nullable>
     <AssemblyName>Simslib</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
